--- a/Test/牛客网/1.对称数.html
+++ b/Test/牛客网/1.对称数.html
@@ -8,6 +8,7 @@
             var result=i*i;
             if(symmetry(result)){
                 console.log(i+"*"+i+"="+result);
+                console.log("啦啦啦啦")
 
             }
         }
