--- a/h5c3/HTML5/9.视频.html
+++ b/h5c3/HTML5/9.视频.html
@@ -13,5 +13,10 @@
     <source src="../movie/movie01.ogg"/>
     <source src="../movie/movie01.webm"/>
 </video>
+
+<video controls width="320" height="240">
+    <source src="视频文件路径">  
+    浏览器不支持video元素时替换的文字
+</video>
 </body>
 </html>
