--- a/h5c3/HTML5/8.音频.html
+++ b/h5c3/HTML5/8.音频.html
@@ -15,5 +15,16 @@
     <source src="../mp3/1.wav"/>
     <source src="../mp3/1.ogg"/>
 </audio>
+<!-- controls:播放控制台
+autoplay：自动播放
+loop:循环
+preload属性 规定是否在页面加载后载入音频 ,可能的值：
+        auto – 当页面加载后载入整个音频 
+        meta – 当页面加载后只载入元数据 
+        none – 当页面加载后不载入音频
+<audio controls loop autoplay preload="auto">
+    <source src="文件路径">
+    不支持audio元素时替换的文字
+</audio> -->
 </body>
 </html>
