--- a/算法/leetcode/删除排序数组中的重复项2-80.html
+++ b/算法/leetcode/删除排序数组中的重复项2-80.html
@@ -8,7 +8,8 @@
 </body>
 <script>
     /**
-     * 给定一个排序数组，你需要在原地删除重复出现的元素，使得每个元素最多出现两次，返回移除后数组的新长度。
+     * 给定一个排序数组，你需要在原地删除重复出现的元素，
+     * 使得每个元素最多出现两次，返回移除后数组的新长度。
      * @param {number[]} nums
      * @return {number}
      */
@@ -31,10 +32,25 @@
             }
         }
         return nums.length;
-
     };
-    var nums = [1,1,1,1,2,2,2,3,3];
-    console.log(removeDuplicates(nums));
+    var removeDuplicates1 = function(nums) {
+        if (nums.length <= 2) {
+            return nums.length;
+        }
+        let p = 1,q= p+1;
+        for (let i = 0; i < nums.length; i++) {
+            if (nums[p-1] === nums[q]){
+                q++;
+            }else {
+                nums[p+1] = nums[q];
+                p++;
+                q++;
+            }
+        }
+        return p-1;
+    };
+    var nums = [1,1,2,2,3,4,4,4,4,5,5,5,5,6,7];
+    console.log(removeDuplicates1(nums));
     console.log(nums);
 </script>
 </html>
