--- a/project02-webapi/1.基于DOM对象案例/39.移除某个元素的自定义属性.html
+++ b/project02-webapi/1.基于DOM对象案例/39.移除某个元素的自定义属性.html
@@ -19,6 +19,8 @@
 <div id="dv" score="10" class="cls"></div>
 <script src="common.js"></script>
 <script>
+    var attr = my$("btn").attributes;
+    console.log([].slice.call(attr));
     //移除自定义属性：removeAttribute（"属性名"）；----也可以移除元素的类样式
     my$("btn").onclick= function () {
         my$("dv").removeAttribute("score");
