--- a/页面练习/ES6模块化/index.html
+++ b/页面练习/ES6模块化/index.html
@@ -5,9 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<div id="myDiv">CLick me</div>
 </body>
-<script>
+<script type="module" src="index.js">
 
 </script>
 </html>
